--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,11 +5,12 @@ spring:
     password: postgres
   jpa:
     hibernate:
-      ddl-auto: validate
+      ddl-auto: update
   flyway:
-    locations:
-      - classpath:db/migration
-    baseline-on-migrate: true
+    enabled: false
+#    locations:
+#      - classpath:db/migration
+#    baseline-on-migrate: true
   jackson:
     serialization:
       FAIL_ON_EMPTY_BEANS: false
